implementación de historial y mejoras visuales en la interfaz
- Se añadió la dependencia `kotlinx-datetime` para el manejo de fechas.
- Se agregó el campo `createdAt` al modelo `AsistenciaResponse`.
- Nueva pantalla `HistoryScreen` para visualizar el historial de asistencias con formato de fecha local (Perú).
- Rediseño de la interfaz `AdminScreen` y `HomeScreen` con un sistema de temas mejorado, nuevos iconos y feedback visual responsivo.
- Optimización del flujo de escaneo QR y registro manual.
- Eliminación de la dependencia de `ScanRecord` local en favor de los datos provenientes de la API.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,7 @@ ktor = "2.3.11"
 coroutines = "1.7.3"
 serialization = "1.6.2"
 jetbrains-foundation = "1.7.0"
+kotlinx-datetime = "0.6.0"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -40,6 +41,7 @@ ktor-client-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "kto
 ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
+kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
